--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
+    "lottie-react": "^2.4.0",
     "next": "14.2.13",
     "plop": "^4.0.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "axios": "^1.7.7"
   },
   "devDependencies": {
     "@types/node": "^20",
