--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -19,7 +19,8 @@
     "plop": "^4.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "axios": "^1.7.7"
+    "axios": "^1.7.7",
+    "@phosphor-icons/react": "2.1.5-alpha.3"
   },
   "devDependencies": {
     "@types/node": "^20",
